[package]
name = "rei"
version = "0.1.0"
authors = ["mikemehl <michaelalanmehl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
gemini = "0.0.4"
gemini-feed = "0.1.0"
gemini-fetch = "0.2.1"
mio = "0.7.11"
rustls = "0.19.1"
tokio = { version = "1.6.0", features = ["full"] }
url = "2.2.2"
